docs/v8.1/packages_api/data/panelmodel.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "PanelModel"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## PanelModel interface

<b>Signature</b>

```typescript
export interface PanelModel<TOptions = any> 
```
<b>Import</b>

```typescript
import { PanelModel } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  [alert](#alert-property) | <code>any</code> |  |
|  [fieldConfig](#fieldconfig-property) | <code>FieldConfigSource</code> | Field options configuration |
|  [id](#id-property) | <code>number</code> | ID of the panel within the current dashboard |
|  [options](#options-property) | <code>TOptions</code> | Panel options |
|  [pluginVersion](#pluginversion-property) | <code>string</code> | Version of the panel plugin |
|  [scopedVars](#scopedvars-property) | <code>ScopedVars</code> |  |

### alert property

<b>Signature</b>

```typescript
alert?: any;
```

### fieldConfig property

Field options configuration

<b>Signature</b>

```typescript
fieldConfig: FieldConfigSource;
```

### id property

ID of the panel within the current dashboard

<b>Signature</b>

```typescript
id: number;
```

### options property

Panel options

<b>Signature</b>

```typescript
options: TOptions;
```

### pluginVersion property

Version of the panel plugin

<b>Signature</b>

```typescript
pluginVersion?: string;
```

### scopedVars property

<b>Signature</b>

```typescript
scopedVars?: ScopedVars;
```
