docs/v8.2/packages_api/data/panelmodel.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "PanelModel"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## PanelModel interface


<b>Signature</b>

```typescript
export interface PanelModel<TOptions = any, TCustomFieldConfig extends object = any> 
```
<b>Import</b>

```typescript
import { PanelModel } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  [alert](#alert-property) | <code>any</code> | alerting v1 object |
|  [datasource](#datasource-property) | <code>DatasourceRef &#124; null</code> | The datasource used in all targets |
|  [description](#description-property) | <code>string</code> | Description |
|  [fieldConfig](#fieldconfig-property) | <code>FieldConfigSource&lt;TCustomFieldConfig&gt;</code> | Field options configuration |
|  [id](#id-property) | <code>number</code> | ID of the panel within the current dashboard |
|  [options](#options-property) | <code>TOptions</code> | Panel options |
|  [pluginVersion](#pluginversion-property) | <code>string</code> | Version of the panel plugin |
|  [targets](#targets-property) | <code>DataQuery[]</code> | The queries in a panel |
|  [title](#title-property) | <code>string</code> | Panel title |

### alert property

alerting v1 object

<b>Signature</b>

```typescript
alert?: any;
```

### datasource property

The datasource used in all targets

<b>Signature</b>

```typescript
datasource?: DatasourceRef | null;
```

### description property

Description

<b>Signature</b>

```typescript
description?: string;
```

### fieldConfig property

Field options configuration

<b>Signature</b>

```typescript
fieldConfig: FieldConfigSource<TCustomFieldConfig>;
```

### id property

ID of the panel within the current dashboard

<b>Signature</b>

```typescript
id: number;
```

### options property

Panel options

<b>Signature</b>

```typescript
options: TOptions;
```

### pluginVersion property

Version of the panel plugin

<b>Signature</b>

```typescript
pluginVersion?: string;
```

### targets property

The queries in a panel

<b>Signature</b>

```typescript
targets?: DataQuery[];
```

### title property

Panel title

<b>Signature</b>

```typescript
title?: string;
```
